basic maze display

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,1 +1,9 @@
-hello world
+<div class="header">
+    <div class="title">
+        GAME NAME
+    </div>
+</div>
+
+<div class="game">
+  <ccg-level></ccg-level>
+</div>
