--- a/client/src/app/level/level.component.html
+++ b/client/src/app/level/level.component.html
@@ -1,5 +1,3 @@
-<div *ngFor="let row of maze.maze">
-  <button *ngFor="let cell of row">
-    {{cell}}
-  </button>
+<div *ngFor="let row of maze.maze; index as i">
+  <ccg-cell *ngFor="let cell of row; index as j" [i]="i" [j]="j" [cell]="cell"></ccg-cell>
 </div>
