extra styling + assets + rework of click map

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -2,7 +2,7 @@
 
 <div class="header">
     <div class="title">
-        GAME NAME
+        CODE CONVENTION GAME
     </div>
 </div>
 
@@ -15,15 +15,15 @@
       </div>
       <div class="instructions">
         <span class="instruction">Click the tiles to traverse the maze</span>
-        <img width="32" height="32" src="../assets/door.png">
+        <img width="32" height="32" src="../assets/dirt.png">
       </div>
       <div class="instructions">
         <span class="instruction">Overcome the obstacles by solving code conventions</span>
-        <img width="32" height="32" src="../assets/door.png">
+        <img width="32" height="32" src="../assets/puzzle.png">
       </div>
       <div class="instructions">
         <span class="instruction">Find the key</span>
-        <img width="32" height="32" src="../assets/door.png">
+        <img width="32" height="32" src="../assets/key.png">
       </div>
       <div class="instructions">
         <span class="instruction">Reach the door to win!</span>
@@ -32,7 +32,7 @@
     </div>
 
     <div class="instructions">
-      <button (click)="play = true">play</button>
+      <button class="play-button" (click)="play = true">play</button>
     </div>
 
   </div>
