--- a/client/src/app/cell/cell.component.scss
+++ b/client/src/app/cell/cell.component.scss
@@ -3,5 +3,10 @@
   width: 64px;
   height: 64px;
   background-color: red;
-  margin: 2px;
+  // margin: 2px;
+}
+
+.size {
+  width: 64px;
+  height: 64px;
 }
