--- a/client/src/app/cell/cell.component.html
+++ b/client/src/app/cell/cell.component.html
@@ -18,12 +18,17 @@
 </div> -->
 
 <div class="cell" (click)="cellClick()">
-  <div *ngIf="!maze.fogMaze[i][j]">
-    <img height="64" width="64" *ngIf="cell !== cellType.exit">
+  <div class="size" *ngIf="!maze.fogMaze[i][j]">
+    <img height="64" width="64" *ngIf="cell !== cellType.exit && cell !== cellType.empty && cell !== cellType.entrance && cell !== cellType.wall && cell !== cellType.key && cell !== cellType.puzzle">
     <img height="64" width="64" src="../../assets/door.png" *ngIf="cell === cellType.exit">
+    <img height="64" width="64" src="../../assets/dirt.png" *ngIf="cell === cellType.empty">
+    <img height="64" width="64" src="../../assets/dirt.png" *ngIf="cell === cellType.entrance">
+    <img height="64" width="64" src="../../assets/wall.png" *ngIf="cell === cellType.wall">
+    <img height="64" width="64" src="../../assets/key.png" *ngIf="cell === cellType.key">
+    <img height="64" width="64" src="../../assets/puzzle.png" *ngIf="cell === cellType.puzzle">
   </div>
 
-  <div *ngIf="maze.fogMaze[i][j]">
+  <div class="size" *ngIf="maze.fogMaze[i][j]">
     <img height="64" width="64">
   </div>
 </div>
