--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -48,3 +48,13 @@
   background-color: var(--dark);
   color: white;
 }
+
+.author {
+  font-size: 12px;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  padding: 4px;
+  background-color: var(--off-off-light);
+  border-radius: 8px 0 0 0;
+}
