moved assets + deploy

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -15,19 +15,19 @@
       </div>
       <div class="instructions">
         <span class="instruction">Click the tiles to traverse the maze</span>
-        <img width="32" height="32" src="../assets/dirt.png">
+        <img width="32" height="32" src="assets/dirt.png">
       </div>
       <div class="instructions">
         <span class="instruction">Overcome the obstacles by solving code conventions</span>
-        <img width="32" height="32" src="../assets/puzzle.png">
+        <img width="32" height="32" src="assets/puzzle.png">
       </div>
       <div class="instructions">
         <span class="instruction">Find the key</span>
-        <img width="32" height="32" src="../assets/key.png">
+        <img width="32" height="32" src="assets/key.png">
       </div>
       <div class="instructions">
         <span class="instruction">Reach the door to win!</span>
-        <img width="32" height="32" src="../assets/door.png">
+        <img width="32" height="32" src="assets/door.png">
       </div>
     </div>
 
