--- a/client/src/app/cell/cell.component.html
+++ b/client/src/app/cell/cell.component.html
@@ -20,12 +20,12 @@
 <div class="cell" (click)="cellClick()">
   <div class="size" *ngIf="!maze.fogMaze[i][j]">
     <img height="64" width="64" *ngIf="cell !== cellType.exit && cell !== cellType.empty && cell !== cellType.entrance && cell !== cellType.wall && cell !== cellType.key && cell !== cellType.puzzle">
-    <img [ngClass]="{'clickable': clickable}" height="64" width="64" src="../../assets/door.png" *ngIf="cell === cellType.exit">
-    <img [ngClass]="{'clickable': clickable}" height="64" width="64" src="../../assets/dirt.png" *ngIf="cell === cellType.empty">
-    <img [ngClass]="{'clickable': clickable}" height="64" width="64" src="../../assets/dirt.png" *ngIf="cell === cellType.entrance">
-    <img height="64" width="64" src="../../assets/wall.png" *ngIf="cell === cellType.wall">
-    <img [ngClass]="{'clickable': clickable}" height="64" width="64" src="../../assets/key.png" *ngIf="cell === cellType.key">
-    <img [ngClass]="{'clickable': clickable}" height="64" width="64" src="../../assets/puzzle.png" *ngIf="cell === cellType.puzzle">
+    <img [ngClass]="{'clickable': clickable}" height="64" width="64" src="assets/door.png" *ngIf="cell === cellType.exit">
+    <img [ngClass]="{'clickable': clickable}" height="64" width="64" src="assets/dirt.png" *ngIf="cell === cellType.empty">
+    <img [ngClass]="{'clickable': clickable}" height="64" width="64" src="assets/dirt.png" *ngIf="cell === cellType.entrance">
+    <img height="64" width="64" src="assets/wall.png" *ngIf="cell === cellType.wall">
+    <img [ngClass]="{'clickable': clickable}" height="64" width="64" src="assets/key.png" *ngIf="cell === cellType.key">
+    <img [ngClass]="{'clickable': clickable}" height="64" width="64" src="assets/puzzle.png" *ngIf="cell === cellType.puzzle">
   </div>
 
   <div class="size" *ngIf="maze.fogMaze[i][j]">
