--- a/client/src/app/cell/cell.component.html
+++ b/client/src/app/cell/cell.component.html
@@ -17,7 +17,7 @@
   </span>
 </div> -->
 
-<div class="cell" (click)="cellClick()">
+<div class="cell" tabindex="0" (keypress)="keyPress($event)" (click)="cellClick()">
   <div class="size" *ngIf="!maze.fogMaze[i][j]">
     <img height="64" width="64" *ngIf="cell !== cellType.exit && cell !== cellType.empty && cell !== cellType.entrance && cell !== cellType.wall && cell !== cellType.key && cell !== cellType.puzzle">
     <img [ngClass]="{'clickable': clickable}" height="64" width="64" src="assets/door.png" *ngIf="cell === cellType.exit">
