key collection and win mechanism

--- a/client/src/app/level/level.component.html
+++ b/client/src/app/level/level.component.html
@@ -1,3 +1,7 @@
 <div style="height: 64px;" *ngFor="let row of maze.maze; index as i">
   <ccg-cell class="size" *ngFor="let cell of row; index as j" [i]="i" [j]="j" [cell]="cell"></ccg-cell>
 </div>
+
+<div>
+  Key Collected: {{ maze.hasKey ? 'Y' : 'N' }}
+</div>
