--- a/client/src/app/quiz/quiz.component.scss
+++ b/client/src/app/quiz/quiz.component.scss
@@ -18,7 +18,8 @@
   width: 40vw;
   height: 75vh;
   background-color: white;
-  border-radius: 16px;
+  // border-radius: 16px;
+  border: 2px solid black;
   position: relative;
 }
 
@@ -27,11 +28,71 @@
   height: 48px;
   position: absolute;
   right: 0;
-  background-color: darkblue;
+  background-color: black;
+  border: 0;
   color: white;
+}
+
+.close:hover {
+  filter: brightness(50%);
+  cursor: pointer;
 }
 
 .content {
   display: flex;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
+}
+
+.header {
+  height: 64px;
+  display: flex;
+  align-items: center;
+  font-size: 32px;
+  width: 100%;
+  justify-content: center;
+  background-color: var(--off-off-light);
+  // border-radius: 16px 0 0 0;
+
+  margin-bottom: 16px;
+}
+
+.multi {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
+}
+
+.question {
+  width: 80%;
+  height: 40%;
+  background-color: var(--off-light);
+  margin-bottom: 16px;
+  border-radius: 12px;
+  padding-left: 8px;
+  font-size: 20px;
+}
+
+.answers {
+  display: flex;
+  flex-direction: column;
+}
+
+.answer {
+  font-size: 20px;
+  margin: 4px;
+  // background-color: var(--off-light);
+
+  border-radius: .375rem;
+  border-style: solid;
+  border-width: .125rem;
+  box-sizing: border-box;
+  padding: .5rem 1rem;
+}
+
+.answer:hover {
+  filter: brightness(50%);
+  cursor: pointer;
 }
