--- a/client/src/app/cell/cell.component.html
+++ b/client/src/app/cell/cell.component.html
@@ -29,6 +29,6 @@
   </div>
 
   <div class="size" *ngIf="maze.fogMaze[i][j]">
-    <img height="64" width="64">
+    <img height="64" width="64" src="assets/fog.png">
   </div>
 </div>
