--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -23,7 +23,7 @@
       </div>
       <div class="instructions">
         <span class="instruction">Find the key</span>
-        <img width="32" height="32" src="assets/key.png">
+        <img width="32" height="32" src="assets/big_key.png">
       </div>
       <div class="instructions">
         <span class="instruction">Reach the door to win!</span>
