--- a/client/src/app/cell/cell.component.html
+++ b/client/src/app/cell/cell.component.html
@@ -24,7 +24,8 @@
     <img [ngClass]="{'clickable': clickable}" height="64" width="64" src="assets/dirt.png" *ngIf="cell === cellType.empty">
     <img [ngClass]="{'clickable': clickable}" height="64" width="64" src="assets/dirt.png" *ngIf="cell === cellType.entrance">
     <img height="64" width="64" src="assets/wall.png" *ngIf="cell === cellType.wall">
-    <img [ngClass]="{'clickable': clickable}" height="64" width="64" src="assets/key.png" *ngIf="cell === cellType.key">
+    <img [ngClass]="{'clickable': clickable}" height="64" width="64" src="assets/key.png" *ngIf="cell === cellType.key && !maze.hasKey">
+    <img [ngClass]="{'clickable': clickable}" height="64" width="64" src="assets/dirt.png" *ngIf="cell === cellType.key && maze.hasKey">
     <img [ngClass]="{'clickable': clickable}" height="64" width="64" src="assets/puzzle.png" *ngIf="cell === cellType.puzzle">
   </div>
 
