--- a/client/src/app/cell/cell.component.scss
+++ b/client/src/app/cell/cell.component.scss
@@ -2,7 +2,7 @@
   display: inline-block;
   width: 64px;
   height: 64px;
-  background-color: red;
+  background-color: white;
   // margin: 2px;
 }
 
