--- a/client/src/app/level/level.component.scss
+++ b/client/src/app/level/level.component.scss
@@ -3,3 +3,14 @@
   height: 64px;
   display: inline-block;
 }
+
+.inventory {
+  margin-top: 8px;
+  font-size: 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+.items {
+  margin-top: 4px;
+}
