actual quiz question + styling

--- a/client/src/app/quiz/quiz.component.html
+++ b/client/src/app/quiz/quiz.component.html
@@ -9,6 +9,8 @@
       <div class="multi" *ngIf="multiQuiz">
         <div class="question">
           {{multiQuiz.question}}
+          <br><br>
+          <span class="code">{{multiQuiz.code}}</span>
         </div>
         <div class="answers">
 
