added non-functional hearts

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -22,6 +22,10 @@
         <img width="32" height="32" src="assets/puzzle.png">
       </div>
       <div class="instructions">
+        <span class="instruction">Getting an answer wrong will subtract a life</span>
+        <img width="32" height="32" src="assets/puzzle.png">
+      </div>
+      <div class="instructions">
         <span class="instruction">Find the key</span>
         <img width="32" height="32" src="assets/big_key.png">
       </div>
