functional lives with empty end screen

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,4 +1,5 @@
 <ccg-quiz></ccg-quiz>
+<ccg-end></ccg-end>
 
 <div class="header">
     <div class="title">
@@ -30,7 +31,11 @@
         <img width="32" height="32" src="assets/big_key.png">
       </div>
       <div class="instructions">
-        <span class="instruction">Reach the door to win!</span>
+        <span class="instruction">Reach the door with the key continue</span>
+        <img width="32" height="32" src="assets/door.png">
+      </div>
+      <div class="instructions">
+        <span class="instruction">Reach x score to win!</span>
         <img width="32" height="32" src="assets/door.png">
       </div>
     </div>
