--- a/client/src/app/level/level.component.html
+++ b/client/src/app/level/level.component.html
@@ -18,7 +18,7 @@
     <span>Lives:</span>
     <div class="items">
       <div *ngFor="let life of maze.lives">
-        H
+        <img width="32" heart="32" src="assets/heart.png">
       </div>
     </div>
   </div>
