--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -24,7 +24,7 @@
       </div>
       <div class="instructions">
         <span class="instruction">Getting an answer wrong will subtract a life</span>
-        <img width="32" height="32" src="assets/puzzle.png">
+        <img width="32" height="32" src="assets/heart.png">
       </div>
       <div class="instructions">
         <span class="instruction">Find the key</span>
@@ -36,7 +36,7 @@
       </div>
       <div class="instructions">
         <span class="instruction">Reach x score to win!</span>
-        <img width="32" height="32" src="assets/door.png">
+        <!-- <img width="32" height="32" src="assets/door.png"> -->
       </div>
     </div>
 
