--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -60,3 +60,15 @@
   background-color: var(--off-off-light);
   border-radius: 8px 0 0 0;
 }
+
+.score {
+  width: 64px;
+}
+
+.instruction-score {
+  margin-right: 4px;
+}
+
+.instruction-score-left {
+  margin-left: 4px;
+}
