--- a/client/src/app/level/level.component.html
+++ b/client/src/app/level/level.component.html
@@ -13,6 +13,13 @@
       </div>
     </div>
   </div>
+
+  <div class="inventory">
+    <span>Score:</span>
+    <div class="items">
+      {{maze.score}}
+    </div>
+  </div>
   
   <div class="inventory">
     <span>Lives:</span>
