extra questions + some html cleanup

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -31,7 +31,7 @@
         <img width="32" height="32" src="assets/big_key.png">
       </div>
       <div class="instructions">
-        <span class="instruction">Reach the door with the key continue</span>
+        <span class="instruction">Reach the door with the key to continue</span>
         <img width="32" height="32" src="assets/door.png">
       </div>
       <div class="instructions">
