--- a/client/src/app/boss/boss.component.html
+++ b/client/src/app/boss/boss.component.html
@@ -1,5 +1,5 @@
 <div class="cell" tabindex="0" (keypress)="keyPress($event)" (click)="bossClick()" *ngIf="hp > 0">
-  <img width="128" height="128" class="clickable" src="assets/big_key.png" *ngIf="hp === 3">
-  <img width="128" height="128" class="clickable" src="assets/big_bonus.png" *ngIf="hp === 2">
-  <img width="128" height="128" class="clickable" src="assets/big_key.png" *ngIf="hp === 1">
+  <img width="128" height="128" class="clickable" src="assets/boss.png" *ngIf="hp === 3">
+  <img width="128" height="128" class="clickable" src="assets/boss_2.png" *ngIf="hp === 2">
+  <img width="128" height="128" class="clickable" src="assets/boss_3.png" *ngIf="hp === 1">
 </div>
