--- a/client/src/app/level/level.component.scss
+++ b/client/src/app/level/level.component.scss
@@ -21,3 +21,20 @@
   display: flex;
   justify-content: space-between;
 }
+
+.bar {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 2px;
+  align-items: center;
+}
+
+.prog {
+  width: 100%;
+  height: 24px;
+  background-color: green;
+}
+
+.prog-label {
+  margin-right: 4px;
+}
