--- a/client/src/app/level/level.component.scss
+++ b/client/src/app/level/level.component.scss
@@ -32,9 +32,10 @@
 .prog {
   width: 100%;
   height: 24px;
-  background-color: green;
+  background-color: white;
 }
 
 .prog-label {
   margin-right: 4px;
+  margin-left: 4px;
 }
