--- a/client/src/app/level/level.component.scss
+++ b/client/src/app/level/level.component.scss
@@ -33,6 +33,7 @@
   width: 100%;
   height: 24px;
   background-color: white;
+  margin-right: 4px;
 }
 
 .prog-label {
@@ -48,6 +49,19 @@
   justify-content: center;
   color: white;
   background-color: var(--dark);
+  padding-left: 4px;
+  padding-right: 4px;
+  border-radius: 1rem;
+}
+
+.streak {
+  width: 32px;
+  height: 32px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  background-color: #e25822;
   padding-left: 4px;
   padding-right: 4px;
   border-radius: 1rem;
