--- a/client/src/app/end/end.component.html
+++ b/client/src/app/end/end.component.html
@@ -15,6 +15,10 @@
         </div>
       </div>
 
+      <div class="explain">
+         {{quiz.currentExplain}}
+      </div>
+
       <div>
         <button class="play-button" (click)="play()">play again?</button>
       </div>
