--- a/client/src/app/end/end.component.scss
+++ b/client/src/app/end/end.component.scss
@@ -52,6 +52,15 @@
   padding-bottom: 8px;
 }
 
+.explain {
+  display: flex;
+  align-items: center;
+  margin-left: 8px;
+  margin-right: 8px;
+  margin-bottom: 8px;
+  text-align: center;
+}
+
 .play-button {
   font-size: 24px;
   padding: 12px 24px;
